# mcp-code-manager

./: .gitignore  CHANGELOG_DIRECTORY_FEATURES.md  CLAUDE_SETUP.md  GIT_FIXES_SUMMARY.md  LICENSE  MCP_EXPLICACION_TECNICA.md  README.md  debug_git_commit.py  debug_git_status.py  http_server.py  pyproject.toml  requirements.txt  test_git_fixes.py  test_logging.py  verify_git_implementation.py
docs/: API.md  ESTADO_FINAL_HERRAMIENTAS_DOTNET.md  MCP_EXPLICACION_FACIL.md  MCP_EXPLICACION_TECNICA.md
src/: mixin_dotnet.py  mixin_file.py  mixin_git.py  mixin_python.py  mixin_setup_tools.py  server_working.py
src/handlers/: code_handler.py  csharp_test_handler.py  file_handler.py  git_handler.py  python_test_handler.py
src/services/: code_analyzer.py  csharp_service.py  file_manager.py  git_manager.py  python_service.py
src/utils/: dotnet_utils.py  exceptions.py  log_analyzer.py  logger.py  logging_decorators.py  python_utils.py  validators.py
tests/: test_directory_operations.py  test_file_handler.py  test_file_operations.py
